--- a/CSS/style.css
+++ b/CSS/style.css
@@ -625,6 +625,10 @@ display: flex;
     padding: 50px 0;
   }
 
+  .author-about {
+  padding: 80px 0;
+  }
+
   .author-footer p {
     font-size: 0.8rem;
   }
@@ -645,6 +649,9 @@ display: flex;
   .author-experience-grid {
     flex-direction: column;
   }
+  .author-hero {
+  padding: 42px 0;
+}
 
   .author-hero-left{
     width: 100%;
@@ -683,6 +690,10 @@ display: flex;
   margin: 0 auto;
 }
 
+.author-profile-image-wrapper2::before{
+  display: none;
+}
+
 .avatar-blur-frame {
   display: none;
 }
@@ -696,5 +707,9 @@ display: flex;
 
 .author-profile-image-wrapper {
   width: 260px;
+}
+
+.author-section-title{
+  text-align: center;
 }
 }
